2. Трекер SQL [#1734 #464137] changed tracker - connect is not working