@@ -1,19 +1,22 @@
 package ru.job4j.tracker;
 
+import org.postgresql.util.LruCache;
 import ru.job4j.action.*;
 
+import java.sql.SQLException;
 import java.util.Arrays;
 
 import java.util.List;
 
 public class StartUI {
+
     private final Output out;
 
     public StartUI(Output out) {
         this.out = out;
     }
 
-    public void init(Input input, MemTracker memTracker, List<UserAction> actions) {
+    public void init(Input input, Store tracker, List<UserAction> actions) {
         boolean run = true;
         while (run) {
             showMenu(actions);
@@ -23,29 +26,35 @@ public class StartUI {
                 continue;
             }
             UserAction action = actions.get(select);
-            run = action.execute(input, memTracker);
+            run = action.execute(input, (SqlTracker) tracker);
         }
     }
 
     private void showMenu(List<UserAction> actions) {
         out.println("Меню:");
-        for (int i = 0; i < actions.size(); i++) {
-            out.println(i + ". " + actions.get(i).name());
+        for (int index = 0; index < actions.size(); index++) {
+            out.println(index + ". " + actions.get(index).name());
         }
-
     }
 
     public static void main(String[] args) {
         Output output = new ConsoleOutput();
-        Input input = new ValidateInput(output, new ConsoleInput());
-        MemTracker memTracker = new MemTracker();
-        List<UserAction> actions = Arrays.asList(new Create(output),
-                new FindAll(output),
-                new Replace(output),
-                new Delete(output),
-                new FindById(output),
-                new FindByName(output),
-                new Exit(output));
-        new StartUI(output).init(input, memTracker, actions);
+        Input input = new ValidateInput(
+                output, new ConsoleInput()
+        );
+        try (Store tracker = new SqlTracker()) {
+            List<UserAction> actions = List.of(
+                    new Create(output),
+                    new Replace(output),
+                    new Delete(output),
+                    new FindAll(output),
+                    new FindById(output),
+                    new FindByName(output),
+                    new Exit(output)
+            );
+            new StartUI(output).init(input, tracker, actions);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
     }
 }
